# coreference-eval

./: LICENSE  README.md  requirements.txt  setup.cfg  setup.py
corefeval/: __init__.py  __main__.py  document.py  evaluation.py  metric.py  scorer.py
corefeval/metrics/: __init__.py  _b_cubed.py  _ceafe.py  _lea.py  _muc.py
corefeval/utils/: __init__.py  coref_types.py  linear_assignment.py
