[metadata]
name = coreference-eval-tollefj
version = 0.0.1
author = tollef jørgensen
author_email = tollefj@gmail.com
url = https://github.com/tollefj/coreference-eval
description = "coreference metrics and evaluation code"
description-file = README.md
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >= 3.9